--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject - 123"
+    "eject": "react-scripts eject - 123 456"
   }
 }
